; ModuleID = '/home/carl/AnghaBench/linux/drivers/iommu/extr_qcom_iommu.c_qcom_iommu_unmap.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iommu/extr_qcom_iommu.c_qcom_iommu_unmap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iommu_domain = type { i32 }
%struct.iommu_iotlb_gather = type { i32 }
%struct.qcom_iommu_domain = type { %struct.TYPE_2__*, i32, %struct.io_pgtable_ops* }
%struct.TYPE_2__ = type { i32 }
%struct.io_pgtable_ops = type { i64 (%struct.io_pgtable_ops*, i64, i64, %struct.iommu_iotlb_gather*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.iommu_domain*, i64, i64, %struct.iommu_iotlb_gather*)* @qcom_iommu_unmap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @qcom_iommu_unmap(%struct.iommu_domain* %0, i64 %1, i64 %2, %struct.iommu_iotlb_gather* %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca %struct.iommu_domain*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.iommu_iotlb_gather*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca %struct.qcom_iommu_domain*, align 8
  %13 = alloca %struct.io_pgtable_ops*, align 8
  store %struct.iommu_domain* %0, %struct.iommu_domain** %6, align 8
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store %struct.iommu_iotlb_gather* %3, %struct.iommu_iotlb_gather** %9, align 8
  %14 = load %struct.iommu_domain*, %struct.iommu_domain** %6, align 8
  %15 = call %struct.qcom_iommu_domain* @to_qcom_iommu_domain(%struct.iommu_domain* %14)
  store %struct.qcom_iommu_domain* %15, %struct.qcom_iommu_domain** %12, align 8
  %16 = load %struct.qcom_iommu_domain*, %struct.qcom_iommu_domain** %12, align 8
  %17 = getelementptr inbounds %struct.qcom_iommu_domain, %struct.qcom_iommu_domain* %16, i32 0, i32 2
  %18 = load %struct.io_pgtable_ops*, %struct.io_pgtable_ops** %17, align 8
  store %struct.io_pgtable_ops* %18, %struct.io_pgtable_ops** %13, align 8
  %19 = load %struct.io_pgtable_ops*, %struct.io_pgtable_ops** %13, align 8
  %20 = icmp ne %struct.io_pgtable_ops* %19, null
  br i1 %20, label %22, label %21

21:                                               ; preds = %4
  store i64 0, i64* %5, align 8
  br label %52

22:                                               ; preds = %4
  %23 = load %struct.qcom_iommu_domain*, %struct.qcom_iommu_domain** %12, align 8
  %24 = getelementptr inbounds %struct.qcom_iommu_domain, %struct.qcom_iommu_domain* %23, i32 0, i32 0
  %25 = load %struct.TYPE_2__*, %struct.TYPE_2__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @pm_runtime_get_sync(i32 %27)
  %29 = load %struct.qcom_iommu_domain*, %struct.qcom_iommu_domain** %12, align 8
  %30 = getelementptr inbounds %struct.qcom_iommu_domain, %struct.qcom_iommu_domain* %29, i32 0, i32 1
  %31 = load i64, i64* %11, align 8
  %32 = call i32 @spin_lock_irqsave(i32* %30, i64 %31)
  %33 = load %struct.io_pgtable_ops*, %struct.io_pgtable_ops** %13, align 8
  %34 = getelementptr inbounds %struct.io_pgtable_ops, %struct.io_pgtable_ops* %33, i32 0, i32 0
  %35 = load i64 (%struct.io_pgtable_ops*, i64, i64, %struct.iommu_iotlb_gather*)*, i64 (%struct.io_pgtable_ops*, i64, i64, %struct.iommu_iotlb_gather*)** %34, align 8
  %36 = load %struct.io_pgtable_ops*, %struct.io_pgtable_ops** %13, align 8
  %37 = load i64, i64* %7, align 8
  %38 = load i64, i64* %8, align 8
  %39 = load %struct.iommu_iotlb_gather*, %struct.iommu_iotlb_gather** %9, align 8
  %40 = call i64 %35(%struct.io_pgtable_ops* %36, i64 %37, i64 %38, %struct.iommu_iotlb_gather* %39)
  store i64 %40, i64* %10, align 8
  %41 = load %struct.qcom_iommu_domain*, %struct.qcom_iommu_domain** %12, align 8
  %42 = getelementptr inbounds %struct.qcom_iommu_domain, %struct.qcom_iommu_domain* %41, i32 0, i32 1
  %43 = load i64, i64* %11, align 8
  %44 = call i32 @spin_unlock_irqrestore(i32* %42, i64 %43)
  %45 = load %struct.qcom_iommu_domain*, %struct.qcom_iommu_domain** %12, align 8
  %46 = getelementptr inbounds %struct.qcom_iommu_domain, %struct.qcom_iommu_domain* %45, i32 0, i32 0
  %47 = load %struct.TYPE_2__*, %struct.TYPE_2__** %46, align 8
  %48 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %47, i32 0, i32 0
  %49 = load i32, i32* %48, align 4
  %50 = call i32 @pm_runtime_put_sync(i32 %49)
  %51 = load i64, i64* %10, align 8
  store i64 %51, i64* %5, align 8
  br label %52

52:                                               ; preds = %22, %21
  %53 = load i64, i64* %5, align 8
  ret i64 %53
}

declare dso_local %struct.qcom_iommu_domain* @to_qcom_iommu_domain(%struct.iommu_domain*) #1

declare dso_local i32 @pm_runtime_get_sync(i32) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1

declare dso_local i32 @pm_runtime_put_sync(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
